# japan-mesh-tool

./: .gitignore  README.md  main.py  mesh_5.geojsonl  pyproject.toml
japan_mesh_tool/: constants.py  main.py
py_src/: argschems.py  main.py
py_test/: test_main.py
python/: sample.py
python/japanmesh/: __init__.py  constants.py  main.py
python/tests/: test_main.py
rust/: Cargo.toml  japan-mesh  japanmesh
rust/src/: main.rs
src/: sample.py
src/japanmesh/: __init__.py  main.py
src_py/: main.py
src_rs/: Cargo.toml  japan-mesh
src_rs/src/: main.rs
test_py/: test_main.py
tests/: test_main.py
